<resources>

    <string name="app_name">Shefaa</string>

    <!--login screen-->
    <string name="login_screen_id_hint">ID Number</string>
    <string name="login_screen_password_hint">Password</string>
    <string name="login_screen_button_sign_in">Sign in</string>
    <string name="login_screen_forgot_password">Forgot password?</string>

    <!--Sign-up screen-->
    <string name="sign_up_screen_id_hint">ID Number</string>
    <string name="sign_up_screen_name_hint">Name</string>
    <string name="sign_up_screen_date_hint">Date of Birth</string>
    <string name="sign_up_screen_phone_hint">Phone Number</string>
    <string name="sign_up_screen_city_hint">City</string>
    <string name="sign_up_screen_national_id_hint">National ID</string>
    <string name="sign_up_screen_next_button">Next</string>
</resources>
