<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/green_gradient_bg">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:src="@drawable/logo_small"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/colorAccent"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edit_login_screen_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="127dp"
            android:paddingRight="10dp"
            android:textColor="@color/colorAccent"
            android:inputType="number"
            android:hint="@string/login_screen_id_hint"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/colorAccent"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edit_login_screen_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorAccent"
            android:inputType="textPassword"
            android:hint="@string/login_screen_password_hint"/>

    </android.support.design.widget.TextInputLayout>
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginRight="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_round_white"
        android:textColor="@color/textColorGreen"
        android:text="@string/login_screen_button_sign_in"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/textColorGrey"
        android:text="@string/login_screen_forgot_password"/>

</LinearLayout>
