<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:background="@color/backgroundColorGrey"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_horizontal"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:elevation="5dp"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:textColorHint="@color/colorAccent"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="36dp"
                        android:layout_marginLeft="36dp"
                        android:textColor="@color/textColorGreen"
                        android:inputType="number"
                        android:textColorHint="@color/textColorGreen"
                        android:hint="@string/sign_up_screen_id_hint"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorAccent"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="36dp"
                        android:layout_marginLeft="36dp"
                        android:textColor="@color/textColorGreen"
                        android:inputType="number"
                        android:textColorHint="@color/textColorGreen"
                        android:hint="@string/sign_up_screen_name_hint"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColorHint="@color/colorAccent"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="36dp"
                        android:layout_marginLeft="36dp"
                        android:textColor="@color/textColorGreen"
                        android:inputType="number"
                        android:textColorHint="@color/textColorGreen"
                        android:hint="@string/sign_up_screen_date_hint"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColorHint="@color/colorAccent"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="36dp"
                        android:layout_marginLeft="36dp"
                        android:textColor="@color/textColorGreen"
                        android:inputType="number"
                        android:textColorHint="@color/textColorGreen"
                        android:hint="@string/sign_up_screen_phone_hint"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColorHint="@color/colorAccent"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="36dp"
                        android:layout_marginLeft="36dp"
                        android:textColor="@color/textColorGreen"
                        android:inputType="number"
                        android:textColorHint="@color/textColorGreen"
                        android:hint="@string/sign_up_screen_city_hint"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColorHint="@color/colorAccent"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="36dp"
                        android:layout_marginLeft="36dp"
                        android:textColor="@color/textColorGreen"
                        android:inputType="number"
                        android:textColorHint="@color/textColorGreen"
                        android:hint="@string/sign_up_screen_national_id_hint"/>

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/textColorDarkGrey"
                    android:text="@string/login_screen_forgot_password"/>

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/sign_up_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="?android:attr/selectableItemBackground"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="normal"
            android:textColor="@color/textColorGreen"
            android:text="@string/sign_up_screen_next_button"/>

    </LinearLayout>

</LinearLayout>